--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
   <link rel="canonical" href="{{ page.redirect.to }}">
-  <script>location="{{ page.redirect.to }}"</script>
+  <!-- <script>location="{{ page.redirect.to }}"</script> -->
   <meta http-equiv="refresh" content="0; url={{ page.redirect.to }}">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
